[package]
name = "broadlink-rm"
version = "0.1.0"
authors = ["Rinie Kervel", "Vincent Debergue"]

[dependencies]
time = "0.1"
openssl = { version = "0.10", optional = true }
# try RustCrypto
aes = {version = "0.7.5", optional = true }
block-modes = { version = "0.8.1", optional = true }
hex = "0.4.2"
macaddr = "1.0"
hex-literal = "0.3.1"
log="0.4.14"
env_logger="0.9.0"
itertools="0.10.1"

[features]
default = ["rustcrypto"]
rustcrypto = ["aes", "block-modes"]
opensslcrypto = ["openssl"]